application/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    pdb: 'true'
    version: v1
  namespace: default
spec:
  replicas : 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: v1
        block-especific: 'true'
    spec:
      containers:
      - name: frontend
        image: adenilsonkon/devopslabs-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 250m
            memory: 250Mi
        volumeMounts:
        - name: config-volume
          mountPath: /app/src/js/config
      volumes:
      - name: config-volume
        emptyDir: {}
