application/adminer.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adminer
  labels:
    pdb: 'zero'
    istio-metrics: 'true'
  namespace: default
spec:
  selector:
    matchLabels:
      app: adminer
  serviceName: adminer
  replicas: 1
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1  
kind: Service
metadata:
  name: adminer
  labels:
    istio-metrics: 'true'
  namespace: default
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http

  type: ClusterIP
