application/api-images.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-images
  labels:
    app: api-images
    pdb: 'true'
    istio-metrics: 'true'
    block-especific: 'true'
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-images
  template:
    metadata:
      labels:
        app: api-images
        version: v1
        block-especific: 'true'
    spec:
      containers:
      - name: api-images
        image: adenilsonkon/devopslabs-api-images:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 400m
            memory: 512Mi
        
---
apiVersion: v1
kind: Service
metadata:
  name: api-images
  labels:
    app: api-images
    istio-metrics: 'true'
spec:
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
    name: http
  - port: 15020
    targetPort: 15020
    protocol: TCP
    name: http-metrics
  type: ClusterIP
  selector:
    app: api-images
