application/catalogo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogo
  labels:
    app: catalogo 
    pdb: 'true'
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogo
  template:
    metadata:
      labels:
        app: catalogo
    spec:
      containers: 
        - name: catalogo
          image: adenilsonkon/devopslabs-catalogo:latest
          ports:
            - containerPort: 3333
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: catalogo
  labels:
    istio-metrics: 'true'
spec:
  selector:
    app: catalogo
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3333
      name: http
    - protocol: TCP
      port: 15020
      targetPort: 15020
      name: http-metrics
